tests/ui/regions/regions-proc-bound-capture.stderr
error: lifetime may not live long enough
  --> $DIR/regions-proc-bound-capture.rs:9:5
   |
LL | fn static_proc(x: &isize) -> Box<dyn FnMut() -> (isize) + 'static> {
   |                   - let's call the lifetime of this reference `'1`
LL |     // This is illegal, because the region bound on `proc` is 'static.
LL |     Box::new(move || { *x })
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'static`
   |
help: consider changing the trait object's explicit `'static` bound to the lifetime of argument `x`
   |
LL - fn static_proc(x: &isize) -> Box<dyn FnMut() -> (isize) + 'static> {
LL + fn static_proc(x: &isize) -> Box<dyn FnMut() -> (isize) + '_> {
   |
help: alternatively, add an explicit `'static` bound to this reference
   |
LL | fn static_proc(x: &'static isize) -> Box<dyn FnMut() -> (isize) + 'static> {
   |                    +++++++

error: aborting due to 1 previous error

